Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.17
-
Fix Version/s: 10.1.19
-
Component/s: Storage Engine - InnoDB, Storage Engine - XtraDB
-
Labels:
Description
If a user sets something like the following in their configuration file:
innodb_page_size=64k
|
Then they will see a warning like the following in their error log:
InnoDB: Warning: innodb_page_size has been changed from default value 16384 to 65536d. (###EXPERIMENTAL### operation)
|
But the documentation seems to imply that this option is no longer experimental, since Percona's experimental version was replaced with the version from MySQL 5.6.
https://mariadb.com/kb/en/mariadb/xtradbinnodb-server-system-variables/#innodb_page_size
Is this warning inaccurate? If so, the "experimental" reference should probably be removed.